--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<!-- <div class="container">
   
   <h1>Angular Google Map Get Current Location Example - ItSolutionStuff.com</h1>
   
@@ -12,5 +12,24 @@
   <div>Latitude: {{latitude}}</div>
   <div>Longitude: {{longitude}}</div>
   
-</div>
+</div> -->
 <!-- <app-map1></app-map1> -->
+<div class="container">
+   
+  <h1>Angular Google Map with Search Box Example - ItSolutionStuff.com</h1>
+  
+  <div class="form-group">
+    <label>Enter address</label>
+    <input type="text" class="form-control" (keydown.enter)="$event.preventDefault()" placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search>
+  </div>
+  
+  <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
+    <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="true"
+      ></agm-marker>
+  </agm-map>
+  
+  <h5>Address: {{address}}</h5>
+  <div>Latitude: {{latitude}}</div>
+  <div>Longitude: {{longitude}}</div>
+  
+</div>
