--- a/src/app/map3/map3.component.html
+++ b/src/app/map3/map3.component.html
@@ -1,3 +1,3 @@
-<p>map3 works!</p>
+<!-- <p>map3 works!</p>
 <div #map id="map"></div>
-<button (click)="getallstores(31.046051,34.851611999999996)"></button>
+<button (click)="getallstores(31.046051,34.851611999999996)"></button> -->
